# storage/api-docs/api-docs.json
@@ -138,7 +138,7 @@
                         }
                     },
                     "401": {
-                        "description": "Form Validation",
+                        "description": "Bad credentials !!!",
                         "content": {
                             "application/json": {
                                 "schema": {}
@@ -160,10 +160,26 @@
                 "operationId": "index",
                 "responses": {
                     "200": {
-                        "description": "Post Fetching"
+                        "description": "All Posts"
                     },
-                    "default": {
-                        "description": "An error"
+                    "500": {
+                        "description": "Server Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
                     }
                 },
                 "security": [
@@ -205,23 +221,15 @@
                 },
                 "responses": {
                     "201": {
-                        "description": "Register Successfully",
+                        "description": "Post Created Successfully",
                         "content": {
                             "application/json": {
                                 "schema": {}
                             }
                         }
                     },
-                    "200": {
-                        "description": "Register Successfully",
-                        "content": {
-                            "application/json": {
-                                "schema": {}
-                            }
-                        }
-                    },
-                    "422": {
-                        "description": "Unprocessable Entity",
+                    "500": {
+                        "description": "Server Error",
                         "content": {
                             "application/json": {
                                 "schema": {}
@@ -229,7 +237,20 @@
                         }
                     },
                     "400": {
-                        "description": "Bad request"
+                        "description": "Form Validation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     },
                     "404": {
                         "description": "Resource Not Found"
@@ -251,10 +272,26 @@
                 "operationId": "postsForApproveReject",
                 "responses": {
                     "200": {
-                        "description": "Approved/Rejected"
+                        "description": "Posts that need permission Approved/Rejected"
                     },
-                    "default": {
-                        "description": "An error has occurred."
+                    "500": {
+                        "description": "Server Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
                     }
                 },
                 "security": [
@@ -337,22 +374,35 @@
                     }
                 },
                 "responses": {
-                    "200": {
-                        "description": "Success",
+                    "201": {
+                        "description": "Post Updated Successfully",
                         "content": {
                             "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "status_code": {
-                                            "type": "integer",
-                                            "example": "200"
-                                        },
-                                        "data": {
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Server Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "503": {
+                        "description": "Service Unavailable",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
                             }
                         }
                     }
